2004-05-17 multipath-tools-0.2.0
	* change the default klibc by greg's :
	  corrects the segfaults reported by Ling Hwa Hing
2004-05-16 multipath-tools-0.1.9
	* break free from udev : package klibc and libsysfs
	* add a spec file and a "make rpm" rule
	* pensum on klibc changes needed :
		* mmap.c & fork.c : invert includes
		* make clean wipes .*.d
		* auto create the linux symlink
		* remove tools and specfiles (files and Makefile
		  targets)
2004-05-15 multipath-tools-0.1.8
	* Makefiles cleanup and factorisation
	* Compilation fixes for non-ix86 archs, tested on x86_64
	* strip execs harder for a 10% size reduction
	* blacklist /dev/fd* and /dev/loop*
	* dmadm works with sysfs nodes with '!' (cciss for ex)
2004-05-10 multipath-tools-0.1.7
	* bugfixes from	Andy <genanr@emsphone.com> :
		* read the last line of the config file
		* add an entry for the 3PARData storage ctlrs
		* read the last char of vendor and model strings
2004-04-25 multipath-tools-0.1.6
	* add the dmadm WIP tool (read MD superblocks and create
	  corresponding devmaps when possible)
	* plug fd leak in TUR path checker
2004-03-25 multipath-tools-0.1.5
	* kpartx to manage the nested bdevs as /dev/cciss/c0d0.
	  parts are named sysfs style : cciss!c0d0p*
	* kpartx loop support
	* kpartx do DM updates if part maps already present
	* merge kpartx for partitioned multipath support
	* add get_null_uid to getuid methods. assign it the "0" index
	  devices with this getuid are thus ignored by multipath.
	  warning : change /etc/multipath.conf (get_evpd_wwid == 1)
	* mv all_scsi_ids out of the 2.6 code path, into the 2.4 one
	* unlink runfile on malloc exit path
	* update multipath manpage (MikeC)
2004-03-17 multipath-tools-0.1.4
	* multipath clean up
		* split default hw table in hwtable.h
		* split grouping policies in pgpolocies.c
		* pass *mp to setup_map instead of mp[]+index
	* ensure defhwtable is used if /etc/multipath.conf is buggy
	* hwtable is not global anymore